# mon-porfolio-ST

./: .gitignore  01_python_data_engineer.md  02_sql_avance.md  03_snowflake.md  04_data_modeling_etl.md  LICENSE  README.md  add_model.sh  colors-save.md  colors_tags.md  docker-compose.yml  exercices_sql_corriges.ipynb  lancer_enregistrement.sh  notebook.py  requirements.txt  test_gemini.txt
container_projects/: README.md
data_projects/: README.md
documentation/: docker_model_runner_vs_podman.md  pre-requis.md
documentation/Traduction_Mythos_Chaps/: 00_Abstract_Intro.md  01_RSP_Evaluations.md  02_Cyber.md  03_Alignment_Part1.md  04_Alignment_Part2.md  05_Model_Welfare.md  06_Capabilities.md  07_Impressions.md  08_Appendix.md
generate-qr-code-resume/: generate_qr.py  qr.html  requirements.txt
hermes-rag/: Containerfile
presentations-publiques/: presentation_3w_quebec.md  presentation_3w_quebec.pptx
projet_cobol_zos_RQ/: ReadMe.md  cobol_ibmZos.md  projet_cobol_revenu_quebec.md
projet_faker_generator/: .gitignore  README.md  fake_forge.py  generator_requirements.txt  generic_faker.py
projet_obs/: README.md  main.py  test_obs_launch.sh
python_mini_projects/: README.md  dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
requetes_SQL_scripts_et_notebook/: GUIDE_UTILISATEUR_SIMULATEUR_SQL.md  README.md  constants.py  exercices.ipynb  explo.db
script-interaction-model/: pyproject.toml  test_ai.py  test_hf_api.py
scripts_specifics/: README.md
toolbox_ia/: Modelfile  compose.yaml  index.html  models_list.md
web/: app.py
(+90 files in other folders)
